Update compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 services:
-  reddit-to-discord-bot:
+  bot:
     build: .
     container_name: reddit-to-discord-bot
+    env_file:
+      - .env
     volumes:
       - ./seen_comments.pkl:/app/seen_comments.pkl
-      - ./.env:/app/.env
     environment:
       - PYTHONUNBUFFERED=1
